Dircache improvements and testsuite fixes
1. Probabilistic validation for dramatic I/O reduction:
   - Implement "Trust the Cache with Forgiveness" model for directory cache validation
   - Reduces filesystem stat/lstat calls by up to 99% while maintaining safety
   - Configurable validation frequency (1-100) via afp.conf
   - Smart detection distinguishes metadata from content changes
   - Self-healing: Invalid entries automatically re-queried from CNID
   - New metrics track effectiveness (expunged vs invalid_on_use)
   - Backward compatible: Default (freq=1 validates every access) is no change to current
   - Particularly beneficial for deployments only accessed by Netatalk

2. Dircache strict sync:
   - Added dircache_remove_children() function to prune invalid entries during parent rename/move/delete
   - Does NOT remove CNID entries (only dircache) as CNIDs remain valid after rename/move (CNIDs still need to be pruned for parent delete)
   - Fixes long-standing issue where child entries' paths become stale
   - Added missing calls to delete dircache entries in some code paths

3. Fixed FPGetACL test (test398) failing with error -5014:
   - Added debug logging to uuid.c to trace ACL issue
   - Replaced legacy djb2 hash with FNV-1a for better distribution and mixing (avoid UUID collision)
   - Added defensive copy of incoming name to getuuidfromname() due to pointer corruption bug
   - Fixed memory corruption from non-reentrant getpwuid()/getgrgid()
   - Fixed caller (acls.c) to copy from static buffers immediately
   - Added corruption detection logging to identify other unsafe callers

4. Two minor lantest changes
   - Login failures now reported correctly
   - dircache stats reported independent of IO monitoring

--- a/test/afpd/meson.build
+++ b/test/afpd/meson.build
@@ -149,6 +149,7 @@ if have_dtrace and host_os != 'darwin'
                 meson.project_source_root() / 'etc/afpd/fork.c',
                 meson.project_source_root() / 'etc/afpd/appl.c',
                 meson.project_source_root() / 'etc/afpd/catsearch.c',
+                meson.project_source_root() / 'etc/afpd/dircache.c',
                 meson.project_source_root() / 'etc/afpd/directory.c',
                 meson.project_source_root() / 'etc/afpd/enumerate.c',
                 meson.project_source_root() / 'etc/afpd/file.c',
