--- a/doc/Doxyfile.in
+++ b/doc/Doxyfile.in
@@ -1031,7 +1031,7 @@ INPUT_FILE_ENCODING    =
 # provided as Doxygen C comment), *.py, *.pyw, *.f90, *.f95, *.f03, *.f08,
 # *.f18, *.f, *.for, *.vhd, *.vhdl, *.ucf, *.qsf and *.ice.
 
-FILE_PATTERNS          = */DEVELOPER.md *.h
+FILE_PATTERNS          = */DEVELOPER.md *.c *.h
 
 # The RECURSIVE tag can be used to specify whether or not subdirectories should
 # be searched for input files as well.
