meson: refactor the docs installation dir logic
This renames the -Dwith-manual-install-dir option to -Dwith-docs-install-dir

The new option specifies the prefix for all docs, rather than the html manual subdir

In this way, we can use the same prefix for all kinds of generated docs:
html manual, converted readmes, and the doxygen docs

Notably, when used in tandem with the -Dwith-website=true option,
this helps this project's maintainers with automating the website maintenance

--- a/doc/manpages/man8/meson.build
+++ b/doc/manpages/man8/meson.build
@@ -43,6 +43,6 @@ endforeach
 
 if get_option('with-website')
     foreach page : manfiles
-        install_data(page + '.8.md', install_dir: manual_install_path + '/en')
+        install_data(page + '.8.md', install_dir: docs_install_path + '/manual/en')
     endforeach
 endif
