docker: copy only required build files over to workdir
By explicitly copying only what's absolutely necessary for the configuration,
we save on build runtime as well as protect against future unexpected file inclusions

--- a/meson.build
+++ b/meson.build
@@ -2393,12 +2393,21 @@ subdir('include')
 subdir('libatalk')
 subdir('bin')
 subdir('config')
-subdir('doc')
 subdir('etc')
 subdir('contrib')
-subdir('distrib')
 subdir('sys')
-subdir('test')
+
+if get_option('with-docs') != []
+    subdir('doc')
+endif
+
+if 'none' not in init_style
+    subdir('distrib')
+endif
+
+if get_option('with-tests') or get_option('with-testsuite')
+    subdir('test')
+endif
 
 #########################
 # Configuration summary #
