--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,5 +8,8 @@ sonar.sourceEncoding=UTF-8
 sonar.projectName=netatalk
 sonar.projectVersion=4.4
 
+# Don't analyze dynamically generated files
+sonar.exclusions=**/build/**,**/subprojects/**,etc/spotlight/sparql_parser.*,etc/spotlight/spotlight_rawquery_lexer.c,include/atalk/afp_dtrace.h
+
 # Disabling code duplication rule for test code and Unicode lookup tables
 sonar.cpd.exclusions=test/**,libatalk/unicode/precompose.h,libatalk/unicode/utf16_case.c,libatalk/unicode/utf16_casetable.h
