--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -597,22 +597,22 @@ jobs:
               avahi \
               bison \
               cmark \
-              db-4.6.21p7v0 \
+              db-4.6.21p8v0 \
               dbus \
-              gcc-11.2.0p15 \
+              gcc-11.2.0p19 \
               heimdal \
               iniparser \
               libevent \
               libgcrypt \
               libtalloc \
-              localsearch-3.8.2p0 \
+              localsearch-3.10.0 \
               mariadb-client \
               meson \
-              openldap-client-2.6.9p0v0 \
+              openldap-client-2.6.10v0 \
               p5-Net-DBus \
-              pkgconf \
-              sqlite \
-              tinysparql-3.8.2
+              pkgconfig \
+              sqlite3-3.50.4 \
+              tinysparql-3.10.0
           run: |
             set -e
             meson setup build \
