libatalk: create utility function convert_utf8_to_mac()
The convert_utf8_to_mac() function is based on utompath() which is implemented
in etc/afpd/desktop.c but of a simpler, earlier form

In comparison, utompath() can handle other input charsets than UTF-8,
while also doing Mac filename mangling after charset conversion

As a side note, utompath() in etc/afpd/desktop.c cannot easily be moved to libatalk
since the mangling logic also sits in the afpd code,
and has deep coupling with other afpd logic such as dirlookup().
A much larger refactoring would be needed here.

--- a/libatalk/util/meson.build
+++ b/libatalk/util/meson.build
@@ -9,6 +9,7 @@ util_sources = [
     'locking.c',
     'logger.c',
     'netatalk_conf.c',
+    'pathconv.c',
     'queue.c',
     'server_child.c',
     'server_ipc.c',
