--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -8,6 +8,9 @@ on:
       - 'meson.build'
   workflow_dispatch:
 
+permissions:
+  contents: read
+
 concurrency:
   group: "pages"
   cancel-in-progress: false
@@ -19,7 +22,6 @@ jobs:
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     permissions:
-      contents: read
       pages: write
       id-token: write
     container:
