--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -539,24 +539,18 @@ jobs:
           prepare: |
             export PKG_PATH="http://ftp.NetBSD.org/pub/pkgsrc/packages/NetBSD/$(uname -p)/$(uname -r|cut -f '1 2' -d.)/All"
             pkg_add \
-              bison \
               cmark \
               db5 \
-              flex \
               gcc13 \
-              gnome-tracker \
               heimdal \
               iniparser \
-              libcups \
               libevent \
               libgcrypt \
               meson \
               mysql-client \
-              p5-Net-DBus \
               perl \
               pkg-config \
-              sqlite3 \
-              talloc
+              sqlite3
           run: |
             set -e
             meson setup build \
