config: overhaul daemon configuration file comments
Tweak the config file comment headers of all daemons in the Netatalk suite
to clarify context and basic usage

--- a/config/afp.conf.in
+++ b/config/afp.conf.in
@@ -1,5 +1,7 @@
 ;
-; Netatalk 4.x configuration file
+; Netatalk AFP file server configuration file
+;
+; See the `afp.conf' manual page for all available options
 ;
 
 [Global]
