--- a/config/atalkd.conf
+++ b/config/atalkd.conf
@@ -1,3 +1,8 @@
-# AppleTalk daemon configuration (netatalk 4.x)
 #
-# See the `atalkd.conf' manual page for examples.
+# AppleTalk daemon (atalkd) configuration file
+# Part of the Netatalk suite
+#
+# Leave this file empty to allow atalkd to detect and configure
+# AppleTalk interfaces automatically
+#
+# See the `atalkd.conf' manual page for all available options
