--- a/config/macipgw.conf
+++ b/config/macipgw.conf
@@ -1,6 +1,9 @@
-; MacIP Gateway daemon configuration (netatalk 4.x)
+;
+; MacIP Gateway daemon (macipgw) configuration file
+; Part of the Netatalk suite
 ;
 ; See the `macipgw.conf' manual page for all available options
+;
 
 [Global]
 ; network = 192.168.151.0
