--- a/config/papd.conf
+++ b/config/papd.conf
@@ -1,6 +1,8 @@
-# PAP print server daemon configuration (Netatalk 4.x)
 #
-# See the `papd.conf' manual page for examples.
+# PAP print server daemon (papd) configuration file
+# Part of the Netatalk suite
+#
+# See the `papd.conf' manual page for all available options
 
-# Uncomment the following line to share all CUPS enabled printers.
+# Uncomment the following line to share all CUPS enabled printers
 # cupsautoadd:op=root:
