webmin: consistently refer to Netatalk as an AFP File Server
Consistently refer to Netatalk as an AFP File Server,
to emphasize standards compliance and cross-platform support

--- a/contrib/webmin_module/module.info.in
+++ b/contrib/webmin_module/module.info.in
@@ -1,5 +1,5 @@
 name=Netatalk Manager
 category=servers
 os_support=macos solaris *-linux freebsd openbsd netbsd
-desc=Netatalk Mac File Sharing
+desc=Netatalk AFP File Server
 version=@netatalk_version@
