--- a/.github/workflows/code_analysis.yml
+++ b/.github/workflows/code_analysis.yml
@@ -29,9 +29,6 @@ jobs:
     env:
       BUILD_WRAPPER_OUT_DIR: build_wrapper_output_directory
     steps:
-      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
-        with:
-          fetch-depth: 0
       - name: Install dependencies
         run: |
           apt-get update
@@ -42,6 +39,7 @@ jobs:
               curl \
               flex \
               gcc \
+              git \
               libacl1-dev \
               libavahi-client-dev \
               libcrack2-dev \
@@ -65,6 +63,9 @@ jobs:
               systemtap-sdt-dev \
               tracker-miner-fs \
               unzip
+      - uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+        with:
+          fetch-depth: 0
       - name: Install Build Wrapper
         uses: SonarSource/sonarqube-scan-action/install-build-wrapper@a31c9398be7ace6bbfaf30c0bd5d415f843d45e9 # v7.0.0
       - name: Run build wrapper
