rephrase descriptions of the netatalk suite to emphasize cross-platform
in docs, man pages, and elsewhere, emphasize that this is a cross-platform
AFP server that works with Macs, Apple IIs, and 3rd party AFP clients

rephrase verbiage that suggests that Macs are the only AFP clients,
or use other less ambiguous terms

--- a/distrib/initscripts/freebsd.netatalk.in
+++ b/distrib/initscripts/freebsd.netatalk.in
@@ -31,8 +31,8 @@
 # REQUIRE: DAEMON @freebsd_zeroconf@
 # KEYWORD: shutdown
 #
-# AFP fileserver for Mac clients.  Add the following to /etc/rc.conf to
-# enable:
+# Netatalk AFP fileserver.
+# Add the following to /etc/rc.conf to enable:
 #
 # netatalk_enable="YES"
 #
