--- a/distrib/initscripts/systemd.netatalk.service.in
+++ b/distrib/initscripts/systemd.netatalk.service.in
@@ -1,7 +1,7 @@
 # This file is part of Netatalk @netatalk_version@.
 
 [Unit]
-Description=Netatalk AFP fileserver for Macintosh clients
+Description=Netatalk AFP fileserver
 Documentation=man:afp.conf(5) man:netatalk(8) man:afpd(8) man:cnid_metad(8) man:cnid_dbd(8)
 Documentation=https://netatalk.io/
 After=network-online.target avahi-daemon.service atalkd.service
