meson: introduce option to force the building of subprojects
by enabling'-Dwith-subprojects' you make meson fetch the tarballs
and build subprojects, even if the dependency was found on the system

this has the side effect that you can build netatalk distribution tarballs
with bundled subprojects on any system

--- a/meson.build
+++ b/meson.build
@@ -667,7 +667,7 @@ has_bgets = cc.compiles(bgets_test_code, name: 'bgets defined in standard C libr
 cdata.set('HAVE_BGETS', has_bgets)
 bstring = dependency('bstring', required: false)
 
-if not bstring.found()
+if not bstring.found() or get_option('with-subprojects')
     bstring_proj = subproject('bstring')
     bstring = bstring_proj.get_variable('bstring_dep')
 endif
